# gitorizer

./: README.md  com.gitorizer.daemon.plist  config.example.toml  install.py  main.py  pyproject.toml
gitorizer/: cli.py  config.py  daemon.py  git_ops.py  watcher.py
